# dry-python.github.io

./: .eslintrc.js  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  .yamllint  404.html  CNAME  Pipfile  azure-pipelines.yml  dry-python.org.lektorproject  index.html  mddoctest.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  sitemap.xml  stylelint.config.js  tasks.py  webpack.config.js
.github/: dependabot.yml
about/: index.html
app/: package-lock.json  package.json  webpack.config.js
app/dry-python/: index.css  index.js
blog/: index.html
configs/: google-analytics.ini  markdown-highlighter.ini
content/: contents.lr
content/news/: contents.lr
databags/: community_cards.ini  navbar.ini  news.ini
docs/: index.md  news.md  projects.md  talks.md  team.md
models/: news-record.ini  news.ini  project-list.ini  project.ini  team-member.ini  team.ini  welcome.ini
news/: index.html
projects/: index.html
search/: search_index.json
slides/: ddd-toolkit-2.pug  ddd-toolkit-3.pug  ddd-toolkit.pug  index.js  index.pug  introducing-dry-python.pug  keeping-software-soft.pug  notes.org  package-lock.json  package.json  webpack.config.js
static/: app.css  app.css.map  app.js  app.js.map  pygments.css  styles.css  styles.css.map  styles.js  styles.js.map
talks/: index.html
team/: index.html
templates/: layout.html  news-record.html  news.html  page.html  project-list.html  project.html  team.html  welcome.html
webpack/: package-lock.json  package.json  postcss.config.js  tailwind.config.js  webpack.config.js
(+116 files in other folders)
