[tool.poetry]
name = "dry-python.org"
version = "0.1.0"
description = "dry-python.org website"
authors = ["Artem Malyshev <proofit404@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.0.4"
mkdocs-material = "^4.6.0"

[tool.poetry.dev-dependencies]
pre-commit = "^1.21.0"
yamllint = "^1.20.0"
invoke = "^1.4.0"
