[tool.poetry]
name = "dry-python.org"
version = "0.1.0"
description = "dry-python.org website"
authors = ["Artem Malyshev <proofit404@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ghp-import = "^0.5.5"
mkdocs = "^1.1"
mkdocs-material = "^5.1.4"

[tool.poetry.dev-dependencies]
dependencies = "^1.0"
django = "^3.0.5"
flake8 = "^3.7.9"
invoke = "^1.4.0"
pre-commit = "^2.3.0"
stories = "^0.15.0"
yamllint = "^1.23.0"
